2013: SPREAD version 1.0.7 release candidate
------------------------------------------------
* fixed bug in Continuous tree template that caused empty KMLs to be generated

March 4, 2013: SPREAD version 1.0.6 released
------------------------------------------------
* Combo box for choosing state attribute name in Discrete tree tab.
* Combo box for choosing indicator attribute name in Discrete Bayes Factor test tab
* Combo box for choosing state attribute name in Continuous tree tab.
* Combo boxes for attribute names in Time Slicer.
* Log files parser compatible with BEAST 1 and BEAST 2.
* Improved handling of exceptions in Open and Save dialogs
* Status bar for common messages
* Kmlframework merged into sources (New BSD license)

November 18, 2012: SPREAD version 1.0.5 released
------------------------------------------------

* Improved custom time slicer
* Progress bar for tree slicer.
* Automated jar detection.
* Column for posterior probabilities value included in the terminal output for BF calculation.
* Some changes to error handling.
* BibTeX entry in help message
* We go back to the old name to avoid users getting confused

April 21, 2012: SPREAD-phy version 1.0.4 released
------------------------------------------------

* Name change: prepended 'phy' for phylogeny to the software name to conform with Debian naming convention.
* SPREAD-phy now has it's own build system
* Removed ColorPicker dependency by combining the original code. This code (in the colorpicker package) is released under 
  New BSD license.
* Row numbers in location coordinates editor  
* Fixed bug in Bayes factor values sort function (introduced in v1.0.3)

February 4, 2012: SPREAD version 1.0.3 released
-----------------------------------------------

* The results of Bayes Factor test are now presented in ascending order, both in the Terminal window and in the KML output.
* The weights used in Time Slicer template are now printed to the Terminal window.