@@ -1,6 +1,7 @@
 2013: SPREAD version 1.0.7 release candidate
 ------------------------------------------------
-* fixed bug in Continuous tree template that caused empty KMLs to be generated
+* Fixed bug in Continuous tree template that caused empty KMLs to be generated
+* Moved state attribute name spinner after the tree file loader (in the order the files should be loaded)
 
 March 4, 2013: SPREAD version 1.0.6 released
 ------------------------------------------------
